# NEVEN

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  REBUILD_CHECKLIST.md  build.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-test.yml
Addin/: CMakeLists.txt  CustomUI.xml
Common/: AutoLoader.cc  CMakeLists.txt  ConfigService.cc  ConfigService.h  Constants.h  ContentPipeline.cc  ContentPipeline.h  CrashHandler.cc  CrashHandler.h  DiagnosticRouter.cc  DiagnosticRouter.h  DiscoveryService.cc  DiscoveryService.h  EnvService.cc  EnvService.h  GCMonitor.cc  LogService.cc  LogService.h  MenuService.cc  MenuService.h  NevenBackgroundConnector.cc  NevenBackgroundConnector.h  NevenInitOrchestrator.cc  NevenInitOrchestrator.h  NevenProgressiveRegisterExport.cc  NevenProgressiveRegisterExport.h  NevenProgressiveRegistrar.cc  NevenProgressiveRegistrar.h  NevenStartupConfig.cc  NevenStartupConfig.h  NevenStartupTypes.h  NevenStatusBarReporter.cc  NevenStatusBarReporter.h  NevenWatchdogTimer.cc  NevenWatchdogTimer.h  NotebookExporter.cc  NotebookExporter.h  NotebookLibrary.cc  NotebookLibrary.h  PlutoManager.cc  (+33 more)
Common/IPC/: MessageValidator.cc  MessageValidator.h  REPLBridge.cc  REPLBridge.h  SafePipeHandle.cc  SafePipeHandle.h  message_utilities.cc  message_utilities.h  pipe.cc  pipe.h
Common/Security/: InputSanitizer.cc  InputSanitizer.h  SandboxVerifier.cc  SecurityService.cc  SecurityService.h
ControlJulia/: CMakeLists.txt  ControlJulia.vcxproj.filters.xml  ControlJulia.vcxproj.xml  README.md
ControlJulia/include/: JuliaConversion.h  Julia_Environment.h  julia_compat.h  julia_interface.h
ControlJulia/lib/: libjulia.def  libjulia.def.txt  rebuild-julia-lib.ps1
ControlJulia/src/: JuliaConversion.cpp  Julia_Environment.cpp  control_julia.cc  julia_interface.cc
ControlPython/: CMakeLists.txt
ControlPython/include/: control_python.h  python_interface.h
ControlPython/src/: control_python.cc  python_interface.cc
ControlR/: CMakeLists.txt  ControlR.vcxproj.filters.xml  ControlR.vcxproj.xml  README.md
ControlR/include/: R_Environment.h  console_graphics_device.h  controlr.h  controlr_common.h  convert.h  gdi_graphics_device.h  spreadsheet_graphics_device.h
ControlR/include/R_ext/: Complex.h
ControlR/lib/: R64.def  RGraphApp64.def
ControlR/src/: R_Environment.cpp  console_graphics_device.cc  controlr.cc  convert.cc  gdi_graphics_device.cc  rinterface_common.cc  rinterface_win.cc  spreadsheet_graphics_device.cc
Core/: CMakeLists.txt  README.md  RJ2XCL.rc  RJ2XCL.vcxproj.filters.xml  RJ2XCL.vcxproj.xml  resource.h
Core/include/: COMHandler.h  CallbackDispatcher.h  FileWatchService.h  GraphicsHandler.h  ICallbackHandler.h  IExcelBridge.h  LanguageManager.h  MockExcelBridge.h  RaiiXlOper.h  RibbonService.h  WinExcelBridge.h  basic_functions.h  callback_info.h  com_object_map.h  excel_api_functions.h  excel_com_type_libraries.h  file_change_watcher.h  function_descriptor.h  language_desc.h  language_service.h  rj2xcl.h  rj2xcl_graphics.h  rj2xcl_integration_constants.h  rj2xcl_version.h  stdafx.h  targetver.h  type_conversions.h
Core/src/: COMHandler.cc  CallbackDispatcher.cc  FileWatchService.cc  GraphicsHandler.cc  LanguageManager.cc  REPLLanguageAccessorImpl.cc  RaiiXlOper.cc  RibbonService.cc  WinExcelBridge.cc  basic_functions.cc  com_object_map.cc  dllmain.cpp  excel_api_functions.cc  file_change_watcher.cc  language_desc.cc  language_service.cc  rj2xcl.cc  rj2xcl.def  rj2xcl_graphics.cc  xlcall_stubs.cc
Include/: AutoLoader.h  GCMonitor.h  Rconfig.h  Rembedded.h  Rinterface.h  Rinternals.h  Rversion.h  SandboxVerifier.h  ScriptEngine.h  XLCALL.cpp  XLCALL.h  graphapp.h  julia.h
Include/R_ext/: Arith.h  Boolean.h  Complex.h  Error.h  GraphicsDevice.h  GraphicsEngine.h  Memory.h  Parse.h  Print.h  RStartup.h  Rdynload.h  Riconv.h  Utils.h
Install/: .gitignore  Build-Installers.ps1  Deploy-UserDocs.ps1  Install-NEVEN.cmd  Install-NEVEN.ps1  README.md  Uninstall-NEVEN.cmd  Uninstall-NEVEN.ps1  license.txt  neven-languages.json
Install/prompts/: comparar_modelos.txt  detectar_outliers.txt  evaluar_modelo.txt  explicar_acp.txt  interpretar_regresion.txt  (+2 more)
Module/: DESCRIPTION  NAMESPACE  README.md
OfficeTypes/: mso.tlh
PB/: CMakeLists.txt  variable.pb.cc  variable.pb.h  variable.proto
Ribbon/: CMakeLists.txt  README.md  RJ2XCLRibbon.idl  RJ2XCLRibbon.rc  RJ2XCLRibbon.rgs  RJ2XCLRibbon.tlb  RJ2XCLRibbon.vcxproj.filters.xml  RJ2XCLRibbon.vcxproj.xml  RJ2XCLRibbon_utf8.rc  Ribbon.def  dllmain.cpp  resource.h  resource_utf8.h  ribbon.cc  ribbon_connect.cc  ribbon_connect.h  ribbon_ui.xml  stdafx.cpp  stdafx.h
docs/: ANTES_DE_INICIAR.md  INFORME_AUDITORIA.md  NAMING-ESP.md  NAMING.md  _build_docs.js  neven-docs.html
libreria/: R4XCL-AD-Esquisse.R
notebooks/: demo_regression.R  hl20_reentry.jl
scripts/: add-license-headers.ps1  build-all.ps1  build-julia-sysimage.jl  build-ribbon.ps1  generate-docs.ps1  install_pluto.jl  rebuild-r-libs.ps1  run_pluto.jl
startup/: startup.jl  startup.jl.sha256  startup.py  startup.r  startup.r.sha256
tests/: CMakeLists.txt  basic_functions_tests.cc  build_verification_tests.cc  callback_behavior_tests.cc  callback_dispatcher_tests.cc  com_object_map_tests.cc  common_tests.cc  config_service_tests.cc  discovery_tests.cc  e2e_tests.cc  env_lookup_pbt.cc  input_sanitizer_pbt.cc  input_sanitizer_tests.cc  integration_tests.cc  language_service_tests.cc  mock_engine_backend.cc  new_functions_tests.cc  pipe_lifecycle_tests.cc  protobuf_ipc_pbt.cc  python_reactivation_exploration_pbt.cc  python_reactivation_preservation_pbt.cc  python_sandbox_pbt.cc  r_library_tests.cc  raii_xloper_tests.cc  reliability_pbt.cc  reliability_tests.cc  repo_hygiene_tests.cc  sandbox_blocklist_pbt.cc  sandbox_path_pbt.cc  sandbox_tests.cc  security_tests.cc  type_conversion_tests.cc  viewer_professional_tests.cc  webview2_pbt.cc
tests/mocks/: mock_language_service.h  mock_type_info.h
(+171 files in other folders)
